// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTechnicalSpec component Renders correctly when Multiple classifications provided With more than one feature units 1`] = `
<body>
  <div>
    <div
      class="ProductTechnicalSpec"
    >
      <div>
        <table
          class="MuiTable-root Table-root-115 Table-evenColor-117"
        >
          <thead
            class="MuiTableHead-root ColorPair-root-127 ColorPair-pearl-129"
          >
            <tr
              class="MuiTableRow-root MuiTableRow-head"
            >
              <th
                class="MuiTableCell-root MuiTableCell-head"
                scope="col"
              >
                appearanceAttributes
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head"
                scope="col"
              />
            </tr>
          </thead>
          <tbody
            class="MuiTableBody-root"
          >
            <tr
              class="MuiTableRow-root"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
              >
                measurement
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
              >
                200mm
              </td>
            </tr>
            <tr
              class="MuiTableRow-root"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
              >
                measurement
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
              >
                100mm
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</body>
`;

exports[`ProductTechnicalSpec component Renders correctly when Multiple classifications provided With no feature units 1`] = `
<body>
  <div>
    <div
      class="ProductTechnicalSpec"
    >
      <div>
        <table
          class="MuiTable-root Table-root-77 Table-evenColor-79"
        >
          <thead
            class="MuiTableHead-root ColorPair-root-89 ColorPair-pearl-91"
          >
            <tr
              class="MuiTableRow-root MuiTableRow-head"
            >
              <th
                class="MuiTableCell-root MuiTableCell-head"
                scope="col"
              >
                appearanceAttributes
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head"
                scope="col"
              />
            </tr>
          </thead>
          <tbody
            class="MuiTableBody-root"
          >
            <tr
              class="MuiTableRow-root"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
              >
                feature1
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
              >
                200mm
              </td>
            </tr>
            <tr
              class="MuiTableRow-root"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
              >
                feature1
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
              >
                100mm
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</body>
`;

exports[`ProductTechnicalSpec component Renders correctly when One classifications provided With a feature units 1`] = `
<body>
  <div>
    <div
      class="ProductTechnicalSpec"
    >
      <div>
        <table
          class="MuiTable-root Table-root-39 Table-evenColor-41"
        >
          <thead
            class="MuiTableHead-root ColorPair-root-51 ColorPair-pearl-53"
          >
            <tr
              class="MuiTableRow-root MuiTableRow-head"
            >
              <th
                class="MuiTableCell-root MuiTableCell-head"
                scope="col"
              >
                appearanceAttributes
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head"
                scope="col"
              />
            </tr>
          </thead>
          <tbody
            class="MuiTableBody-root"
          >
            <tr
              class="MuiTableRow-root"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
              >
                feature1
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
              >
                200mm
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</body>
`;

exports[`ProductTechnicalSpec component Renders correctly when One classifications provided With no feature units 1`] = `
<body>
  <div>
    <div
      class="ProductTechnicalSpec"
    >
      <div>
        <table
          class="MuiTable-root Table-root-1 Table-evenColor-3"
        >
          <thead
            class="MuiTableHead-root ColorPair-root-13 ColorPair-pearl-15"
          >
            <tr
              class="MuiTableRow-root MuiTableRow-head"
            >
              <th
                class="MuiTableCell-root MuiTableCell-head"
                scope="col"
              >
                appearanceAttributes
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head"
                scope="col"
              />
            </tr>
          </thead>
          <tbody
            class="MuiTableBody-root"
          >
            <tr
              class="MuiTableRow-root"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
              >
                feature1
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
              >
                200
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</body>
`;

exports[`ProductTechnicalSpec component Renders correctly when no classifications provided 1`] = `
<body>
  <div>
    <div
      class="ProductTechnicalSpec"
    >
      MC: pdp.noTechSpecMessage
    </div>
  </div>
</body>
`;

exports[`ProductTechnicalSpec component Renders correctly with microcopy text when no classifications and microcopy text is provided 1`] = `
<body>
  <div>
    <div
      class="ProductTechnicalSpec"
    >
      No technical specifications found for this product.
    </div>
  </div>
</body>
`;
